--- a/styles.css
+++ b/styles.css
@@ -172,6 +172,14 @@ button.close {
     color: white;
 }
 
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+}
+
 @media screen and (max-width: 768px) {
     .inline-input-btn input {
         min-width: auto;
