--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,10 @@ button.close {
     background: none;
 }
 
+.toast-close {
+    background-image: url(./assets/close.svg);
+}
+
 .f-24 {
     font-size: 24px;
 }
@@ -150,27 +154,45 @@ button.close {
 
 .history-modal-body {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 8px;
     padding: 16px;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: center;
 }
 
 /* Add some basic styling for the toast container */
-#toast-container .toaster {
+#toaster-container {
     position: fixed;
     top: 36px;
     right: 36px;
-    color: #fff;
-    padding: 10px;
+    background: #bd362f;
     border-radius: 5px;
-    min-width: 150px;
+    padding: 8px 16px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    box-shadow: 0 0 12px #999;
+    transition: opacity 1s ease-in-out;
+    opacity: 0;
 }
 
-#toast-container .toaster.error {
-    background-color: red;
-    color: white;
+#toaster-container h2{
+    font-size: 1rem;
 }
+#toaster-container p{
+    font-size: 0.8rem;
+}
+#toaster-container .toaster-icon{
+    background-image: url(./assets/close.svg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    width: 24px;
+    height: 24px;
+}
+
+
 
 footer {
     background-color: #333;
@@ -178,6 +200,47 @@ footer {
     text-align: center;
     padding: 10px;
     width: 100%;
+}
+
+
+.card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    width: 300px;
+}
+
+.card-content {
+    padding: 20px;
+}
+
+.card-title {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.card-description {
+    font-size: 1rem;
+    color: #666;
+}
+
+.card-link {
+    display: block;
+    margin-top: 15px;
+    padding: 10px;
+    text-align: center;
+    background-color: #3498db;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+}
+
+.card-link:hover {
+    background-color: #2980b9;
 }
 
 @media screen and (max-width: 768px) {
